# workhours

./: main.cpp
include/: time.h
workhours_ui/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  time.h  time_main.cpp
workhours_ui/build-workhours_ui-Desktop_Qt_5_15_15_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  workhours_ui
workhours_ui/build-workhours_ui-Desktop_Qt_5_15_15_GCC_64bit-Debug/.cmake/api/v1/reply/: codemodel-v2-128e8c0c462e1140f4b7.json  directory-.-Debug-09148d618d010bc5068e.json  index-2023-09-17T06-50-25-0603.json  index-2023-09-28T19-11-21-0874.json  target-workhours_ui-Debug-8da5e59cdb8797d5abd0.json  target-workhours_ui_autogen-Debug-99a7b43e381786b073bb.json  (+1 more)
workhours_ui/build-workhours_ui-Desktop_Qt_5_15_15_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-93ce433e9a2c1c654ff1.json  cmakeFiles-v1-4bb807099b469168b37e.json  cmakeFiles-v1-bb2312e3408d907dd4a1.json  codemodel-v2-034d0e96981fbe6eda92.json  directory-.-Debug-d3718a4d5dc304ec475f.json  target-workhours_ui-Debug-af8cb80deb1a7c6923cd.json
workhours_ui/build-workhours_ui-Desktop_Qt_5_15_15_GCC_64bit-Debug/workhours_ui_autogen/: deps
workhours_ui/build-workhours_ui-Desktop_Qt_5_15_15_GCC_64bit-Debug/workhours_ui_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  qrc_resources.cpp
workhours_ui/build-workhours_ui-Desktop_Qt_5_15_15_GCC_64bit-Debug/workhours_ui_autogen/include/: ui_mainwindow.h
workhours_ui/src/: mainwindow.cpp  mainwindow.ui  time.cpp
(+1 files in other folders)
